src/test/deca/context/invalid/provided/modulo_incorrect3.deca
/*/ Description:
//    Programme effectuant le modulo de façon incorrecte.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        boolean a = true;
        int b = 5;
        int c = a%b;
}
